# human_gait_analizer

./: README.md
human_gait_processor/: .gitignore  mkdocs.yml  pyproject.toml
human_gait_processor/src/: __init__.py
human_gait_processor/src/entities/: __init__.py  frame.py  gait_phase.py  landmark.py  landmark_coordinate.py  video.py
